# django-nova

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
nova/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
nova/migrations/: 0001_initial.py
nova/templates/nova/: admin_page.html
