[metadata]
name = django-nova
version = 0.1.0
author = Jonathan Hidalgo
description = A Notion-like workspace inside Django admin
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/yourusername/django-nova
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = true
install_requires =
    django>=4.0

